--- a/Week6/stylesheet.css
+++ b/Week6/stylesheet.css
@@ -24,7 +24,9 @@ img {
 
 .continue_btn {
     position: relative;
-    
+    width: 25%;
+    height: 25%;
+
     margin-left:auto;
     margin-top: auto;
 
