--- a/Final/project/stylesheet.css
+++ b/Final/project/stylesheet.css
@@ -1,47 +1,33 @@
-﻿body
-{
+﻿body {
     min-height: 100vh;
+    max-height: 100vh;
     margin: 0;
-
     background: url("images/banner2.png");
-    /*background-color: #FDFFD9;*/
     background-color: white;
-
-    /*font-family: 'Freckle Face', cursive;*/
-    /*font-family: 'Open Sans', sans-serif;*/
     font-family: 'Pangolin', cursive;
-
-    display: grid;
-
-    grid-template-columns: 0.25fr 0.8fr 1fr 0.25fr;
-    grid-template-rows: auto 2fr auto;
-
-    grid-template-areas:   
-        "h h h h"
-        ". fm qc ."
-        "f f f f";
 }
 
-/*header{
-    grid-area: h;
+.container {
+    /*background-color: #FDFFD9;*/
+    /*font-family: 'Freckle Face', cursive;*/
+    /*font-family: 'Open Sans', sans-serif;*/
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: 0.25fr 0.8fr 1fr 0.25fr;
+    grid-template-rows: auto 2fr auto;
+    grid-template-areas: "h h h h" ". fm qc ." "f f f f";
+}
 
-    min-height: 50px;*/
-    /*is this needed? test out further*/
-    /*max-height: 10vh;*/
-    /*background-color: #FFF9AA;*/
-    /*background-color: black;
-
-    display: flex;*/
-
-    /*justify-content centers horizontally*/
-    /*align-items center vertically*/
-    /*justify-content:center;
-    align-items:center;
-
-    font-size: 4vw;*/
-    /*color: #00539CFF;*/
-    /*color: white;
-}*/
+.container_wheel {
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: 0.25fr 0.8fr 1fr 0.25fr;
+    grid-template-rows: auto 2fr auto;
+    grid-template-areas: 
+        "h h h h" 
+        ". r r ." 
+        "f f f f";
+}
 
 .navbar {
     grid-area: h;
@@ -82,6 +68,7 @@ li a{
     align-items: flex-end;
 
     padding: 3vw;
+    margin-right: 12vw;
     /*No underline for links*/
     text-decoration: none;
 
@@ -93,7 +80,7 @@ li a:hover{
 }
 
 li a:visited{
-    color:white;
+    /*color:white;*/
     text-decoration: none;
 }
 
@@ -114,6 +101,11 @@ footer {
     color: white;
 }
 
+.Main {
+    grid-area: m;
+    display: flex;
+    flex-direction: row;
+}
 
 .foodMascotContainer {
     grid-area: fm;
@@ -179,4 +171,43 @@ footer {
     /*background-color:aqua;*/
     cursor: pointer;
     
+}
+
+#answerDisplay{
+    display: none;
+}
+
+#answerDisplay img{
+}
+
+/*Styling form wheel_page*/
+.roulette {
+    grid-area: r;
+    background-color: white;
+
+    display:grid;
+
+    grid-template-rows: 0.1fr 0.9fr;
+    grid-template-columns: auto;
+    grid-template-areas:
+        "wp"
+        "wh";
+}
+
+.wheel{
+    grid-area: wh;
+
+    display: flex;
+
+    justify-content: center;
+    
+}
+
+.wheel_pointer{
+    grid-area: wp;
+
+    display: flex;
+
+    justify-content: center;
+    align-content: flex-end;
 }
