--- a/Web-Developer-Course/store/storestyle.css
+++ b/Web-Developer-Course/store/storestyle.css
@@ -15,6 +15,7 @@ body
     font-family: goblin, Arial;
     /*background-color : #85381a;*/
     background-image: url("images/background.png");
+    cursor: default;
 }
 
 p{
@@ -48,7 +49,8 @@ p{
 
     grid-template-columns: auto auto auto;
     grid-template-areas:
-        "pt ic po";
+        "pt ic po"
+        ". db .";
 
     justify-content: center;
 }
@@ -192,8 +194,8 @@ p{
 #pouch{
     grid-area: po;
 
-    width: 10vw;
-    height: 10vw;
+    width: 12vw;
+    height: 12vw;
 
     background-color: #ECF0F1;
 
@@ -210,7 +212,7 @@ p{
 }
 
 #price_tag {
-    width: 10vw;
+    width: 12vw;
     height: auto;
     background-color: #ECF0F1;
     border-style: solid;
@@ -237,14 +239,33 @@ p{
 
 #purchase_button {
     font-family: goblin;
-    width: 7vw;
-    font-size: 0.6vw;
+    width: 9vw;
+    font-size: 0.5vw;
     margin-bottom: 0.5vw;
 }
 
+.purchased_item{
+    display: flex;
+}
+
+.purchased_item button{
+    width: 1vw;
+    height: 1vw;
+    padding: 0;
+    margin: 0;
+    font-family: goblin, Arial;
+    font-size: 0.3vw;
+    margin-top: 0.4vh;
+    margin-left: 0.5vh;
+}
+
 #description_box{
+    grid-area: db;
     /*display: flex;*/
-    margin: 0 auto;
+    
+    margin: 2vh;
+    margin-top: 0;
+
     width: 45vw;
     background-color: black;
 
@@ -290,7 +311,7 @@ p{
     grid-area: db;
 
     height: 12vw;
-    width: 35vw;
+    width: 34.75vw;
     background-color: #ECF0F1;
     border: solid;
     border-color: #2B2118;
