--- a/Web-Developer-Course/Dungeon/antriStyle.css
+++ b/Web-Developer-Course/Dungeon/antriStyle.css
@@ -8,6 +8,25 @@
     background-color: #fff8ec;
 }
 
+/*tool tip styling*/
+.tooltip {
+    background-color: white;
+    font-family: 'Mate SC', serif;
+    border: solid #754138 5px;
+    text-align: left;
+
+}
+
+.tooltip .tooltip-inner{
+    background-color: #fff8ec;
+    color: black;
+}
+
+.tooltip .tooltip-arrow{
+    display: none;
+}
+
+
 .navbar {
     background-color: #e2cca8;
 }
@@ -52,12 +71,14 @@
     color: #7a4616;
 }
 
+.dropdown-menu .active {
+    background-color: #7a4616;
+}
 
 
 .jumbotron-home {
-    height: 70vh;
     text-align: center;
-    /*background-image: url("images/antri_map.png");*/
+    /*background-image: url("images/welcome_banner.png");*/
     /*background-size: cover;*/
     background-color: #cedfd4;
     display: flex;
@@ -66,8 +87,13 @@
     margin-top: 6.5vh;
 }
 
-.jumbotron-image{
-    max-height: 70vh;
+.jumbotron-image {
+    /*max-height: 70vh;*/
+    /*object-fit: cover;*/
+    width: 60%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .vertical-align{
@@ -80,8 +106,11 @@
     margin-top: 30%;
 }
 
+/*antri race*/
+
 .intro-header{
     font-size: 5vh;
+    margin-top: 8vh;
 }
 
 #body_illus{
@@ -89,8 +118,12 @@
 
 
 /*antri creatures*/
+.creature-container{
+    margin-top: 10vh;
+}
+
 .carousel-container{
-    border: solid;
+    
 }
 
 .carousel-inner img{
@@ -99,46 +132,173 @@
 
 
 /*antri deity*/
+.deity-container{
+    margin-top: 7vh;
+}
+
 .card{
 
 }
 
 .card:hover{
     cursor: pointer;
-    transform: scale(1.025);
-    box-shadow: 0px 0px 10px rgba(189,170,140,0.8);
+    transform: scale(1.05);
+    box-shadow: 0px 0px 20px rgba(189,170,140,1);
 }
+
+.deity-modal-close-btn{
+    float: right;
+}
+
+.modal {
+    
+}
+
+.deity-name{
+    text-align: center;
+    font-size: 7vh;
+}
+
+.deity-modal-card{
+    width: 60%;
+}
+
+.quote-speaker{
+    margin-right: 1vw;
+}
+
+
+/*antri map*/
+.map-title{
+    margin-top: 9vh;
+}
+
+#map_container {
+    position: relative;
+    margin-top: 1vh;
+}
+
+/*@media screen and (min-width: 576px) {
+    #map_container {
+        margin-top: 7vh;
+    }
+}
+*/
+.marker {
+    position: absolute;
+    cursor: pointer;
+}
+
+.marker p{
+    font-size: 2vw;
+    opacity: 0;
+}
+
+.marker-image{
+    height: 50%;
+    width: 50%;
+}
+
+#mark1{
+    top: 12%;
+    left: 7%;
+}
+
+#mark2 {
+    top: 1.5%;
+    left: 40.5%;
+}
+
+#mark3 {
+    top: 9.5%;
+    left: 55.7%;
+}
+
+#mark4 {
+    top: 57%;
+    left: 60%;
+}
+
+#mark5 {
+    top: 60.5%;
+    left: 20.5%;
+}
+
+#mark6 {
+    top: 45%;
+    left: 67.5%;
+}
+
+#mark7 {
+    top: 24.5%;
+    left: 88%;
+}
+
+#mark8 {
+    top: 87%;
+    left: 51.5%;
+}
+
+#mark9 {
+    top: 86.5%;
+    left: 60.5%;
+}
+
+#mark10 {
+    top: 65%;
+    left: 89%;
+}
+
+#antri_map {
+    border: solid #7a4616;
+    width: 100%;
+}
+
+
 
 
 /*scroll up button*/
 #scroll_btn {
     display: none;
     position: fixed;
-    right: 27.5vw;
     
-    bottom: 1vh;
+    bottom: 5vh;
+    right: 1vw;
+    
     
     z-index: 99;
     cursor: pointer;
-    opacity: 0.6;
+    opacity: 0.3;
 }
 
 #scroll_btn:hover{
     
 }
 
-@media screen and (min-width: 576px){
+/*@media screen and (min-width: 576px){
     #scroll_btn {
         bottom: 5vh;
         right: 2vw;
     }
-}
+}*/
 
 
 
 .center {
     display: flex;
     justify-content: center;
+    align-items: center;
+}
+
+.left {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.right {
+    display: flex;
+    justify-content: flex-end;
     align-items: center;
 }
 
