--- a/Web-Developer-Course/Dungeon/Adventure In Antri/adventureStyle.css
+++ b/Web-Developer-Course/Dungeon/Adventure In Antri/adventureStyle.css
@@ -122,7 +122,7 @@ ul{
     margin-top: 1vh;
 
     display: grid;
-    /*display: none;*/
+    display: none;
 
     grid-template-columns: auto;
     grid-template-rows: auto auto auto;
@@ -488,7 +488,7 @@ ul{
 
 #chest_box {
     top: 40%;
-    right: 44%;
+    right: 40%;
 }
 
 #weapon_box {
@@ -555,11 +555,13 @@ ul{
     height: 25vh;
     width: 34vh;
 
+    overflow: auto;
+
 }
 
 #move_deck_container ul{
-    margin-top: 5vh;
-    padding-top: 2vh;
+    margin-top: 1vh;
+
 }
 
 #move_deck_container ul li{
@@ -1042,6 +1044,29 @@ ul{
     position: relative;
 }
 
+#fear_bar{
+    position: absolute;
+    right: 2%;
+    top: 50%;
+    color: white;
+
+    font-size: 2vh;
+
+    width: 8vh;
+    height: 8vh;
+
+    background-image: url("images/icon/fear_bar.png");
+    background-size: 8vh 8vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#fear_bar:hover{
+    cursor: pointer;
+}
+
 /*#area_name{
     grid-area: an;
     text-align: center;
@@ -1084,11 +1109,14 @@ ul{
     align-items: center;
     flex-direction: column;
 
+    margin-left: 1vh;
+    margin-right: 1vh;
+
 }
 
 .enemy img{
-    width: 20vh;
-    height: 20vh;
+    width: 18vh;
+    height: 18vh;
 }
 
 .enemy_active{
@@ -1103,6 +1131,35 @@ ul{
 }
 
 #enemy_3{
+}
+
+.enemy_stat_container{
+    display: flex;
+    /*background-color: white;*/
+}
+
+.enemy_status_container{
+    display: flex;
+    /*background-color: white;*/
+}
+
+.status_effect{
+    cursor: pointer;
+    height: 3vh;
+    width: 3vh;
+    background-size: 3vh 3vh;
+
+    font-size: 1.2vh;
+
+    color: white;
+}
+
+
+.enemy_status_container img{
+    width: 3vh;
+    height: 3vh;
+
+    cursor: pointer;
 }
 
 .enemy_health{
@@ -1165,10 +1222,34 @@ ul{
 
     top: 55%;
     right: 90%;
+
+    z-index: 2;
+
+    /*width: 8vh;
+    height: 8vh;*/
+
+    color: white;
+
+    font-size: 1.5vh;
+}
+
+#action_points_icon {
+    position: absolute;
+
+    top: 42%;
+    right: 89%;
+
+    z-index: 1;
+
+    width: 6vh;
+    height: 6vh;
 }
 
 #end_turn_button {
     position: absolute;
+
+    font-size: 1vh;
+    width: 5.5vh;
     
     top: 65%;
     right: -5%;
@@ -1177,21 +1258,43 @@ ul{
 }
 
 .move_card{
-    font-size: 1vh;
+    font-size: 0.8vh;
 
-    margin-left: 1vh;
-    margin-right: 1vh;
+    width: 12vh;
+
+    margin-left: 0.5vh;
+    margin-right: 0.5vh;
+
+    position: relative;
     
+}
+
+.move_card:hover p{
+    font-size: 1.2vh;
+    width: 10vh;
+    right: 11%;
 }
 
 .move_card img{
     width: 12vh;
     /*cursor: pointer;*/
+
+    
 }
 
 .move_card img:hover{
-    transform: scale(1.1);
+    transform: scale(1.3);
     cursor:pointer;
+    
+}
+
+.move_card p{
+    position: absolute;
+    top: 65%;
+    right: 13%;
+
+    width: 8vh;
+
     
 }
 
@@ -1235,6 +1338,8 @@ ul{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+    position: relative;
 }
 
 #chec_shop_title{
@@ -1265,6 +1370,11 @@ ul{
     margin-left: 0.5vh;
 }
 
+#three_random_card img:hover{
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
 #card_shop{
     width: 60vh;
     height: 25vh;
@@ -1282,6 +1392,19 @@ ul{
 
     margin-right: 0.3vh;
     margin-left: 0.3vh;
+}
+
+#card_shop img:hover{
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+#chec_shop_leave_button{
+    position: absolute;
+    top: 90%;
+    right: 2%;
+
+    background-color: green;
 }
 
 /*Shop screen*/
