--- a/Web-Developer-Course/Dungeon/antriStyle.css
+++ b/Web-Developer-Course/Dungeon/antriStyle.css
@@ -1,11 +1,13 @@
 ﻿body {
-    font-family: 'Mate SC', serif;
+    font-family: 'Josefin Sans', sans-serif;
     height: 100vh;
     padding: 0;
     margin: 0;
     display: flex;
     flex-direction: column;
-    background-color: #fff8ec;
+    background-color: #F8EDE3;
+    color: #575757;
+    font-size: 2vh;
 }
 
 /*tool tip styling*/
@@ -26,17 +28,27 @@
     display: none;
 }
 
+.footer-home {
+    background-color: #798777;
+    /*position: fixed;
+    left: 0;
+    bottom: 0;*/
+    width: 100%;
+    color: white;
+    margin-top: auto;
+}
 
 .navbar {
-    background-color: #e2cca8;
+    background-color: #798777;
+    
 }
 
 .navbar-home{
     
 }
 
-.nav-link{
-    color: #7a4616;
+.nav-link {
+    color: white;
 }
 
 .nav-link.show{
@@ -48,31 +60,30 @@
 }
 
 .nav-link:hover{
-    color: white;
+    color: black;
 }
 
 
 /*Centers navbar links*/
-@media (min-width: 567px) {
+/*@media (min-width: 567px) {
     .abs-center-x {
         position: absolute;
         top: 1.25vh;
         left: 50%;
         transform: translateX(-50%);
     }
-}
+}*/
 
 .dropdown-menu {
-    background-color: #e2cca8;
-    
+    background-color: #A2B29F;
 }
 
 .dropdown-item {
-    color: #7a4616;
+    color: #798777;
 }
 
 .dropdown-menu .active {
-    background-color: #7a4616;
+    background-color: #798777;
 }
 
 
@@ -80,7 +91,7 @@
     text-align: center;
     /*background-image: url("images/welcome_banner.png");*/
     /*background-size: cover;*/
-    background-color: #cedfd4;
+    background-color: #BDD2B6;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -111,15 +122,23 @@
 .intro-header{
     font-size: 5vh;
     margin-top: 8vh;
+    margin-left: 12vh;
+    font-family: 'DM Serif Display', serif;
 }
 
 #body_illus{
+    /*width: 20vw;*/
+}
+
+.quote {
+    font-family: 'DM Serif Display', serif;
 }
 
 
 /*antri creatures*/
-.creature-container{
+.creature-container {
     margin-top: 10vh;
+    font-family: 'DM Serif Display', serif;
 }
 
 .carousel-container{
@@ -136,8 +155,9 @@
     margin-top: 7vh;
 }
 
-.card{
-
+.card {
+    background-color: #798777;
+    color: white;
 }
 
 .card:hover{
@@ -154,9 +174,10 @@
     
 }
 
-.deity-name{
+.deity-name {
     text-align: center;
     font-size: 7vh;
+    font-family: 'DM Serif Display', serif;
 }
 
 .deity-modal-card{
@@ -169,13 +190,18 @@
 
 
 /*antri map*/
-.map-title{
+.map-title {
     margin-top: 9vh;
+    font-family: 'DM Serif Display', serif;
 }
 
 #map_container {
     position: relative;
     margin-top: 1vh;
+}
+
+.serif-display {
+    font-family: 'DM Serif Display', serif;
 }
 
 /*@media screen and (min-width: 576px) {
@@ -302,12 +328,4 @@
     align-items: center;
 }
 
-.footer-home {
-    background-color: #e2cca8;
-    /*position: fixed;
-    left: 0;
-    bottom: 0;*/
-    width: 100%;
-    color: #7a4616;
-    margin-top: auto;
-}
+
