--- a/Web-Developer-Course/Dungeon/antriStyle.css
+++ b/Web-Developer-Course/Dungeon/antriStyle.css
@@ -95,7 +95,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 6.5vh;
+    margin-top: 2vw;
 }
 
 .jumbotron-image {
@@ -104,6 +104,7 @@
     width: 70vw;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 5vh;
 }
 
 .vertical-align{
