--- a/Web-Developer-Course/Dungeon/antriStyle.css
+++ b/Web-Developer-Course/Dungeon/antriStyle.css
@@ -181,12 +181,15 @@
     box-shadow: 0px 0px 20px rgba(189,170,140,1);
 }
 
-.deity-modal-close-btn{
-    float: right;
-}
 
 .modal {
-    
+    /*position: relative;*/
+}
+
+.deity-modal-close-btn {
+    position: absolute;
+    top : 3%;
+    right: 5%;
 }
 
 .deity-name {
