--- a/resumeStyle.css
+++ b/resumeStyle.css
@@ -129,7 +129,7 @@ h1{
 
     background-color: var(--bg-primary);
 
-    height: 70vh;
+    /*height: 70vh;*/
     width: 100vw;
     max-width: 100%;
 
@@ -138,7 +138,7 @@ h1{
 
 .intro-content {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     margin-top: 12rem;
 }
 
@@ -148,12 +148,28 @@ h1{
 
     border: solid 0.5rem;
     border-color: var(--text-primary);
-
 }
 
 .intro-description{
-    width: 35vw;
-    margin-left: 2rem;
+    width: 70vw;
+    margin-bottom: 6rem;
+}
+
+@media screen and (min-width: 700px) {
+    .intro-content{
+        flex-direction: row;
+    }
+
+    .portrait {
+        margin-bottom: 6rem;
+    }
+
+    .intro-description {
+        margin-left: 2rem;
+        width: 35vw;
+    }
+
+
 }
 
 .section-header{
