--- a/Web-Developer-Course/Dungeon/Adventure In Antri/adventureStyle.css
+++ b/Web-Developer-Course/Dungeon/Adventure In Antri/adventureStyle.css
@@ -122,7 +122,7 @@ ul{
     margin-top: 1vh;
 
     display: grid;
-    display: none;
+    /*display: none;*/
 
     grid-template-columns: auto;
     grid-template-rows: auto auto auto;
@@ -360,7 +360,7 @@ ul{
 /*End of character info/stat related*/
 
 #inventory_container {
-    display: none;
+    /*display: none;*/
 
     grid-area: ic;
 
@@ -1340,6 +1340,8 @@ ul{
     flex-direction: column;
 
     position: relative;
+
+    font-size: 1.5vh;
 }
 
 #chec_shop_title{
@@ -1362,6 +1364,8 @@ ul{
 
     justify-content: center;
     align-items: center;
+
+    text-align: center;
 }
 
 #three_random_card img{
@@ -1373,6 +1377,15 @@ ul{
 #three_random_card img:hover{
     transform: scale(1.05);
     cursor: pointer;
+}
+
+.card_container {
+    background-color: pink;
+}
+
+.card_container p{
+    margin: 0;
+    font-size: 1vh;
 }
 
 #card_shop{
