--- a/resumeStyle.css
+++ b/resumeStyle.css
@@ -57,7 +57,7 @@ a {
     background-color: var(--bg-third);
     transition: width 400ms ease;
 
-    z-index: 3;
+    z-index: 4;
 
     font-size: 12px;
 }
@@ -328,11 +328,11 @@ h1{
 }
 
 .carousel figcaption h2{
-    margin-left: 0.8rem;
+    margin-left: 0.3rem;
 }
 
 .carousel figcaption p{
-    margin-left: 1rem;
+    margin-left: 0.5rem;
 }
 
 .carousel-content {
@@ -417,6 +417,40 @@ h1{
 /*    object-fit: cover;
 */}
 
+#left_arrow {
+    display: none;
+    position: absolute;
+    left: 5%;
+    z-index: 3;
+    margin-top: 35%;
+    margin-left: -1.5rem;
+}
+
+#left_arrow img{
+    width: 3rem;
+}
+
+#left_arrow:hover {
+    cursor: pointer;
+}
+
+#right_arrow {
+    display: none;
+    position: absolute;
+    left: 95%;
+    z-index: 3;
+    margin-top: 35%;
+    margin-left: -1.5rem;
+}
+
+#right_arrow:hover{
+    cursor: pointer;
+}
+
+#right_arrow img{
+    width: 3rem;
+}
+
 @media screen and (min-width: 700px) {
     #projects {
         height: 60rem;
@@ -436,6 +470,14 @@ h1{
         width: var(--proj-main-width);
         height: var(--proj-main-height);
         margin-top: 0;
+    }
+
+    .carousel figcaption h2{
+    margin-left: 0.8rem;
+    }
+
+    .carousel figcaption p{
+        margin-left: 1rem;
     }
 
     .carousel-1 {
@@ -489,6 +531,14 @@ h1{
     .carousel figcaption {
         display: none;
         
+    }
+
+    #left_arrow{
+        display: block;
+    }
+
+    #right_arrow {
+        display: block;
     }
 }
 
