--- a/Web-Developer-Course/Dungeon/Adventure In Antri/adventureStyle.css
+++ b/Web-Developer-Course/Dungeon/Adventure In Antri/adventureStyle.css
@@ -122,7 +122,7 @@ ul{
     margin-top: 1vh;
 
     display: grid;
-    /*display: none;*/
+    display: none;
 
     grid-template-columns: auto;
     grid-template-rows: auto auto auto;
@@ -360,7 +360,7 @@ ul{
 /*End of character info/stat related*/
 
 #inventory_container {
-    /*display: none;*/
+    display: none;
 
     grid-area: ic;
 
