--- a/resumeStyle-Resume.css
+++ b/resumeStyle-Resume.css
@@ -6,14 +6,27 @@
 
 .resumeContainer{
     background-color: #FBFBFB;
-    height: 718px;
-    width: 40vw;
-    border: solid #000000 1px;
+    height: 80vh;
+    width: 64vh;
 
     margin: 5rem 3rem 0 3rem;
+
+    filter: drop-shadow(0px 4px 2px #c2c2c2);
 }
 
 .resumeInfo {
     padding-top: 1rem;
     padding-left: 2rem;
+}
+
+.resumeSVG {
+    height: 80vh;
+    width: 64vh;
+    pointer-events: none;
+}
+
+.expandSVG {
+    position: absolute;
+    top: 0;
+    right: 0;
 }
