--- a/resumeStyle.css
+++ b/resumeStyle.css
@@ -11,7 +11,7 @@
     --bg-third: #056676;
 
     --main-one: #ffffff;
-    --main-two: #644516;
+    --main-two: #FFF5EE;
 
     --transition-speed: 600ms;
 
@@ -53,7 +53,6 @@ body::-webkit-scrollbar-thumb {
 
 a {
     text-decoration: none;
-    color: white;
 }
 
 
@@ -72,7 +71,7 @@ a {
 
     font-size: 12px;
 
-    filter: drop-shadow(0px 4px 8px #7c7c7c);
+    filter: drop-shadow(0px 2px 4px #c2c2c2);
 
 }
 
@@ -671,6 +670,7 @@ h1{
 .end-content{
    display: flex;
    align-items: center;
+   color: black;
 }
 
 
@@ -687,4 +687,8 @@ h1{
 
 .center{
     text-align: center;
+}
+
+.white{
+    color: white;
 }
