--- a/resumeStyle-Main.css
+++ b/resumeStyle-Main.css
@@ -3,7 +3,7 @@
     align-items: center;
     flex-direction: column;
     height: 100vh;
-    margin-top: 3rem;
+    padding-top: 3rem;
 }
 
 .mainPageBanner{
@@ -40,6 +40,7 @@
 
 .mainPage-contentBottom{
     display: flex;
+    height: 100vh;
 }
 
 .navigationTab{
